@@ -1,41 +1,35 @@
 package ewm.main.event.service;
 
-import ewm.main.dto.EventRequestStatusUpdateRequestDto;
-import ewm.main.dto.EventRequestStatusUpdateResultDto;
-import ewm.main.dto.EventShortDto;
-import ewm.main.dto.ParticipationRequestDto;
-import ewm.main.dto.UpdateEventUserRequestDto;
-import ewm.main.event.mapper.EventMapper;
-import ewm.main.event.model.Event;
-import ewm.main.event.model.EventState;
-import ewm.main.dto.search.PageParam;
-import ewm.main.event.repository.EventRepository;
-import ewm.main.exception.ConflictException;
-import ewm.main.place.Place;
-import ewm.main.place.repository.PlaceRepository;
-import ewm.main.request.mapper.ParticipationRequestMapper;
-import ewm.main.request.model.ParticipationRequest;
-import ewm.main.request.model.RequestStatus;
-import ewm.main.request.repository.ParticipationRequestRepository;
-import jakarta.validation.ValidationException;
-import lombok.AllArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-
 import ewm.main.category.Category;
 import ewm.main.category.repository.CategoryRepository;
 import ewm.main.dto.EventFullDto;
+import ewm.main.dto.EventShortDto;
 import ewm.main.dto.NewEventDto;
+import ewm.main.dto.UpdateEventUserRequestDto;
+import ewm.main.dto.search.PageParam;
+import ewm.main.event.mapper.EventMapper;
+import ewm.main.event.model.Event;
+import ewm.main.event.model.EventState;
+import ewm.main.event.repository.EventRepository;
+import ewm.main.exception.ConflictException;
 import ewm.main.exception.NotFoundException;
+import ewm.main.place.Place;
+import ewm.main.place.repository.PlaceRepository;
+import ewm.request.client.RequestClient;
+import ewm.request.dto.EventRequestStatusUpdateRequestDto;
+import ewm.request.dto.EventRequestStatusUpdateResultDto;
+import ewm.request.dto.InternalUpdateRequestStatusDto;
+import ewm.request.dto.ParticipationRequestDto;
 import ewm.user.client.UserClient;
 import feign.FeignException;
+import jakarta.validation.ValidationException;
+import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -45,7 +39,7 @@ public class PrivateEventServiceImpl implements PrivateEventService {
     private final UserClient userClient;
     private final EventRepository eventRepository;
     private final CategoryRepository categoryRepository;
-    private final ParticipationRequestRepository participationRequestRepository;
+    private final RequestClient requestClient;
     private final EventDtoAssembler eventDtoAssembler;
     private final PlaceRepository placeRepository;
 
@@ -125,40 +119,28 @@ public class PrivateEventServiceImpl implements PrivateEventService {
         log.info("Получение заявок на участие для userId: {} и eventId: {}", userId, eventId);
 
         if (eventRepository.findOneByInitiatorIdAndId(userId, eventId).isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
-        return participationRequestRepository.findAllByEventId(eventId)
-                .stream()
-                .map(ParticipationRequestMapper::toDto)
-                .toList();
+        return requestClient.getRequestsForEvent(eventId);
     }
 
     @Override
-    @Transactional
     public EventRequestStatusUpdateResultDto setRequestsStatus(long userId, long eventId, EventRequestStatusUpdateRequestDto dto) {
-        log.info("Установка статуса заявок на участие для userId: {}, eventId: {}, dto: ", userId, eventId, dto);
-        RequestStatus statusToUpdate = RequestStatus.parse(dto.getStatus());
-
-        if (statusToUpdate != RequestStatus.CONFIRMED && statusToUpdate != RequestStatus.REJECTED) {
-            throw new ConflictException("Недопустимый статус для этой операции:" + statusToUpdate);
-        }
+        log.info("Установка статуса заявок на участие для userId: {}, eventId: {}, dto: {}", userId, eventId, dto);
 
         Event event = findEventByUserIdAndEventIdOrThrow(userId, eventId);
 
-        List<Long> requestIds = dto.getRequestIds();
-        if (requestIds.isEmpty()) {
-            return new EventRequestStatusUpdateResultDto(Collections.emptyList(),
-                    Collections.emptyList());
-        }
+        // participantLimit/requestModeration принадлежат событию — у request-service
+        // нет доступа к таблице events, поэтому передаём их явно вместе с запросом.
+        InternalUpdateRequestStatusDto internalDto = InternalUpdateRequestStatusDto.builder()
+                .requestIds(dto.getRequestIds())
+                .status(dto.getStatus())
+                .participantLimit(event.getParticipantLimit())
+                .requestModeration(event.isRequestModeration())
+                .build();
 
-        List<Long> distinctIds = dto.getRequestIds().stream().distinct().toList();
-
-        if (statusToUpdate == RequestStatus.CONFIRMED) {
-            return confirmRequests(event, distinctIds);
-        }
-
-        return rejectRequests(event, distinctIds);
+        return requestClient.updateStatus(eventId, internalDto);
     }
 
     @Override
@@ -190,87 +172,9 @@ public class PrivateEventServiceImpl implements PrivateEventService {
         eventRepository.save(event);
     }
 
-    private EventRequestStatusUpdateResultDto confirmRequests(Event event, List<Long> requestIds) {
-
-        int participantsLimit = event.getParticipantLimit();
-        if (!event.isRequestModeration() || participantsLimit == 0) {
-            throw new ConflictException("Подтверждение заявок не требуется");
-        }
-
-        long confirmedRequests = participationRequestRepository.countByEventIdAndStatus(event.getId(), RequestStatus.CONFIRMED);
-        long available = participantsLimit - confirmedRequests;
-
-        if (requestIds.size() > available) {
-            throw new ConflictException("Превышен лимит участников");
-        }
-
-        List<ParticipationRequest> requests = participationRequestRepository.findAllByIdInAndEvent_Id(requestIds, event.getId());
-        if (requests.size() < requestIds.size()) {
-            throw new NotFoundException("Найдены не все заявки");
-        }
-
-        List<ParticipationRequest> confirmRequests = new ArrayList<>();
-        List<ParticipationRequest> rejectedRequests = new ArrayList<>();
-
-        for (ParticipationRequest request : requests) {
-            RequestStatus currentStatus = request.getStatus();
-            if (currentStatus != RequestStatus.PENDING) {
-                throw new ConflictException("Нельзя изменить статус заявки с id: " + request.getId() + ", она в статусе:" + currentStatus);
-            }
-
-            request.setStatus(RequestStatus.CONFIRMED);
-            confirmRequests.add(request);
-        }
-
-        if (available != 0 && available == requestIds.size()) {
-            List<ParticipationRequest> requestsToReject = participationRequestRepository.findAllByEvent_IdAndStatus(event.getId(),
-                    RequestStatus.PENDING);
-            for (ParticipationRequest request : requestsToReject) {
-                request.setStatus(RequestStatus.REJECTED);
-                rejectedRequests.add(request);
-            }
-        }
-
-        EventRequestStatusUpdateResultDto resultDto = new EventRequestStatusUpdateResultDto();
-        resultDto.setConfirmedRequests(confirmRequests.stream().map(ParticipationRequestMapper::toDto).toList());
-        resultDto.setRejectedRequests(rejectedRequests.stream().map(ParticipationRequestMapper::toDto).toList());
-
-        log.info("Результат установки статуса CONFIRMED: {}", resultDto);
-
-        return resultDto;
-    }
-
-    private EventRequestStatusUpdateResultDto rejectRequests(Event event, List<Long> requestIds) {
-
-        List<ParticipationRequest> requests = participationRequestRepository.findAllByIdInAndEvent_Id(requestIds, event.getId());
-        if (requests.size() < requestIds.size()) {
-            throw new NotFoundException("Найдены не все заявки");
-        }
-
-        List<ParticipationRequest> rejectedRequests = new ArrayList<>();
-
-        for (ParticipationRequest request : requests) {
-            RequestStatus currentStatus = request.getStatus();
-            if (currentStatus != RequestStatus.PENDING) {
-                throw new ConflictException("Нельзя изменить статус заявки с id: " + request.getId() + ", она в статусе:" + currentStatus);
-            }
-
-            request.setStatus(RequestStatus.REJECTED);
-            rejectedRequests.add(request);
-        }
-
-        EventRequestStatusUpdateResultDto resultDto = new EventRequestStatusUpdateResultDto();
-        resultDto.setConfirmedRequests(Collections.emptyList());
-        resultDto.setRejectedRequests(rejectedRequests.stream().map(ParticipationRequestMapper::toDto).toList());
-
-        log.info("Результат установки статуса REJECTED: {}", resultDto);
-
-        return resultDto;
-    }
-
     /**
-     * Пользователи больше не хранятся в этой БД — существование проверяем через
-     * Feign-вызов в user-service. 404 от user-service транслируем в свой NotFoundException.
+     * Пользователи хранятся в user-service — проверяем существование через Feign
+     * и транслируем 404 оттуда в свой NotFoundException.
      */
     private void checkUserExistsOrThrow(long userId) {
         try {
